modify config,clean files